--- a/public/app/index.html
+++ b/public/app/index.html
@@ -115,7 +115,7 @@
         <div class="row" style="margin:0px;">
             <div class="col-sm-12 text-center">
                 <p style="margin:0px;">Terms of Use. <a href="#privacy">Privacy Policy</a></p>
-                © 2015 <a target="_blank" href="#" title="">Evezown</a>. All Rights Reserved.
+                © 2015 <a target="_blank" href="#" title="">Evezown</a>. All Rights Reserved. Powered by<a target="_blank" href="http://webinsights.in" title=""> Webinsights Pvt Ltd</a>.
             </div>
         </div>
     </div>
