Bug fixes and enhancements
1. Invite history - resend invite added, delete with confirmation
enabled.
2. User Registration - validation added while register
3. And few other small bug fixes

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -105,7 +105,7 @@
             </ul>
             <ul class="col-md-4">
                 <li><a href="#contribute">Contribute</a></li>
-                <li><a href="#advertise">Advertise</a></li>
+                <li><a href="#advertisement">Advertise</a></li>
                 <li><a href="#friends/invite" ng-if="loggedIn">Invite Friends</a>
                 </li>
                 <li><a href="#login" ng-if="!loggedIn">Invite Friends</a></li>
