--- a/public/app/index.html
+++ b/public/app/index.html
@@ -66,9 +66,9 @@
     <script>
 
       var base; 
-      var fbAppId       = '186760875042980';
-      var gmailAppId    = '827984482407-qla04m3j9ocaqa0jl8t9j27dn1q39mep.apps.googleusercontent.com';
-      var linkedinAppId = '7589hyi89w4t9h';
+      var fbAppId       = '506370999551048';
+      var gmailAppId    = '81816055431-rqsavvo6lqmk0dhscejmq346ohmg6e09.apps.googleusercontent.com';
+      var linkedinAppId = '75i5a2ejgb4098';
 
        window.fbAsyncInit = function() {
         FB.init({
