--- a/public/app/index.html
+++ b/public/app/index.html
@@ -346,7 +346,7 @@
 <script src="scripts/filters/addlimitellipsis.js"></script>
 
 <script src="custom/satellizer.js"></script>
-
+<script src="custom/angular-local-storage.min.js"></script>
 
 
 <!-- endbuild -->
