--- a/public/app/index.html
+++ b/public/app/index.html
@@ -321,6 +321,7 @@
 <script src="partials/evezplace/classifiedsService.js"></script>
 <script src="partials/evezplace/classifiedsListService.js"></script>
 <script src="partials/evezplace/browse/store/storeService.js"></script>
+<script src="partials/evezplace/productSearch.js"></script>
 <!--<script src="scripts/controllers/buyer/BuyerOrdersCtrl.js"></script>-->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
