--- a/public/app/index.html
+++ b/public/app/index.html
@@ -217,6 +217,8 @@
 <script src="libs/ng-time-relative/dist/ng-time-relative.min.js"></script>
 <script src="//cdn.jsdelivr.net/satellizer/0.9.2/satellizer.min.js"></script>
 <script src="libs/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
+<script src="libs/angular-payments/lib/angular-payments.js"></script>
+
 <!--<script type="text/javascript" src="http://platform.linkedin.com/in.js">-->
     <!--//here goes the api key, and the callback function-->
     <!--api_key: 78-->
@@ -349,6 +351,10 @@
 <script src="custom/satellizer.js"></script>
 <script src="custom/angular-local-storage.min.js"></script>
 
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
+
+ 
 
 <!-- endbuild -->
 
