UI changes,store publish

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -317,6 +317,7 @@
 <script src="partials/evezplace/browse/classifieds/browseClassifieds.js"></script>
 <script src="partials/evezplace/createClassifieds.js"></script>
 <script src="partials/profile/ProfileMenuCtrl.js"></script>
+<script src="partials/profile/PromotionalMenuCtrl.js"></script>
 <script src="partials/admin/articles/articlesService.js"></script>
 <script src="partials/admin/articles/articlesCtrl.js"></script>
 <script src="partials/evezplace/classifiedsService.js"></script>
