Admin manage configuration - implemented

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -261,6 +261,7 @@
 <script src="partials/admin/AdminInviteFrndsCtrl.js"></script>
 <script src="partials/admin/AlbumCtrl.js"></script>
 <script src="partials/admin/Manage/adminScreenCtrl.js"></script>
+<script src="partials/admin/Manage/adminConfigurationCtrl.js"></script>
 <script src="partials/admin/Manage/manageStoreLeftMenuController.js"></script>
 
 
