--- a/public/app/index.html
+++ b/public/app/index.html
@@ -103,7 +103,7 @@
 
 </div>
 
-<div id="chat-container" class="fixed" ng-if="loggedIn" style="display:none;"  ng-include='"partials/chat/chat-form.html"' ng-controller="community"></div>
+<div id="chat-container" class="fixed" ng-if="loggedIn" style="display:none;"  ng-include='"partials/chat/chat-form.html"'></div>
 
 <!-- /container -->
 <footer id="footer" class="midnight-blue">
