--- a/public/app/index.html
+++ b/public/app/index.html
@@ -352,7 +352,7 @@
 <script src="custom/satellizer.js"></script>
 <script src="custom/angular-local-storage.min.js"></script>
 
-<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+<!-- <script type="text/javascript" src="https://js.stripe.com/v2/"></script> -->
 
 
  
