--- a/public/app/index.html
+++ b/public/app/index.html
@@ -264,6 +264,7 @@
 <script src="partials/admin/Manage/adminScreenCtrl.js"></script>
 <script src="partials/admin/Manage/adminConfigurationCtrl.js"></script>
 <script src="partials/admin/Manage/manageStoreLeftMenuController.js"></script>
+<script src="partials/admin/logsinf.js"></script>
 
 
 <script src="partials/admin/grouplists.js"></script>
