--- a/public/app/index.html
+++ b/public/app/index.html
@@ -68,9 +68,9 @@
     <script>
 
       var base; 
-      var fbAppId       = '506370999551048';
-      var gmailAppId    = '81816055431-rqsavvo6lqmk0dhscejmq346ohmg6e09.apps.googleusercontent.com';
-      var linkedinAppId = '75i5a2ejgb4098';
+      var fbAppId       = '245052959173426';
+      var gmailAppId    = '947054555635-pvknme356teuh4nuhj1te5fbl41o08t4.apps.googleusercontent.com';
+      var linkedinAppId = '75g1n36kp2pmlc';
 
        window.fbAsyncInit = function() {
         FB.init({
