Implemented - categories and subcategories edit
Admin can edit the categories and subcategories

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -262,6 +262,7 @@
 <script src="partials/admin/AdminInviteFrndsCtrl.js"></script>
 <script src="partials/admin/AlbumCtrl.js"></script>
 <script src="partials/admin/Manage/adminScreenCtrl.js"></script>
+<script src="partials/admin/Manage/editCategories.js"></script>
 <script src="partials/admin/Manage/adminConfigurationCtrl.js"></script>
 <script src="partials/admin/Manage/manageStoreLeftMenuController.js"></script>
 <script src="partials/admin/logsinf.js"></script>
