--- a/public/app/index.html
+++ b/public/app/index.html
@@ -275,6 +275,7 @@
 <script src="partials/home/ResetPassword.js"></script>
 <script src="partials/profile/profileCtrl.js"></script>
 <script src="partials/profile/profileService.js"></script>
+<script src="partials/profile/profileCountCtrl.js"></script>
 
 <script src="directives/ngFileSelect.js"></script>
 <script src="factory/fileReader.js"></script>
