issue fixes and logo changes

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -89,7 +89,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <!-- <body ng-app="evezownapp" ng-controller="ApplicationCtrl"> -->
-<body ng-app="evezownapp" style="background: #CBFFFF;height:100%">
+<body ng-app="evezownapp" style="background: #AFE7FA;height:100%"> <!-- #A0E3FA -->
 <!-- Header -->
 <nav class="navbar navbar-default" >
     <!-- <div ng-bind-html="preview_data.preview.embed.html | to_trusted"></div> -->
