--- a/public/app/index.html
+++ b/public/app/index.html
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="nsPopover.css"/>
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="profile.css"/>
-    <link rel="stylesheet" href="woice.css"/>
+<!--     <link rel="stylesheet" href="woice.css"/> -->
     <link rel="stylesheet" href="vdrive.css"/>
     <link rel="stylesheet" href="custom/staticpages/staticpages.css"/>
 
